crates/rome_js_formatter/tests/specs/prettier/typescript/declare/declare_function_with_body.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
// Invalid, but recoverable
declare function foo() {}
declare function bar() {
  // comment
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,5 +1,5 @@
 // Invalid, but recoverable
-declare function foo() {};
+declare function foo() {}
 declare function bar() {
   // comment
-};
+}
```

# Output

```js
// Invalid, but recoverable
declare function foo() {}
declare function bar() {
  // comment
}
```


# Errors
```
error[SyntaxError]: A 'declare' function cannot have a function body
  ┌─ declare_function_with_body.ts:2:24
  │
2 │ declare function foo() {}
  │                        ^^ remove this body

error[SyntaxError]: A 'declare' function cannot have a function body
  ┌─ declare_function_with_body.ts:3:24
  │  
3 │   declare function bar() {
  │ ┌────────────────────────^
4 │ │   // comment
5 │ │ }
  │ └─^ remove this body


```


